# cnmULMEvalKit

./: README.md  pyproject.toml
src/cnm_t2i/: cli.py  hfwrap.py  infer.py  installer.py  paths.py  registry.py  runner_templates.py  state.py  uvwrap.py
tests/: test_dry_run.py  test_infer_env.py  test_paths.py  test_resume_download_marker.py
