[project]
name = "cnm-t2i-installer"
version = "0.1.0"
description = "CLI tool to install and run text-to-image models with uv + Hugging Face into a project-local work directory."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "huggingface_hub>=0.23.0",
  "platformdirs>=4.2.0",
  "pydantic>=2.6.0",
  "questionary>=2.0.1",
  "rich>=13.7.0",
  "typer>=0.12.0",
  "typing_extensions>=4.7.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
cnm-t2i = "cnm_t2i.cli:app"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cnm_t2i"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
